--- a/index.html
+++ b/index.html
@@ -241,15 +241,22 @@
         <div class="columns is-centered">
           <div class="column has-text-centered">
             <!-- TODO: Replace with your paper title -->
-            <h1 class="title is-1 publication-title">Academic Project Page</h1>
+            <h1 class="title is-1 publication-title">MANI-PURE: MAGNITUDE-ADAPTIVE NOISE INJEC-
+              TION FOR ADVERSARIAL PURIFICATION</h1>
             <div class="is-size-5 publication-authors">
               <!-- TODO: Replace with your paper authors and their personal links -->
               <span class="author-block">
-                <a href="FIRST AUTHOR PERSONAL LINK" target="_blank">First Author</a><sup>*</sup>,</span>
+                <a href="FIRST AUTHOR PERSONAL LINK" target="_blank">Xiaoyi Huang</a><sup>*</sup>,</span>
                 <span class="author-block">
-                  <a href="SECOND AUTHOR PERSONAL LINK" target="_blank">Second Author</a><sup>*</sup>,</span>
+                  <a href="SECOND AUTHOR PERSONAL LINK" target="_blank">Junwei Wu</a><sup>*</sup>,</span>
                   <span class="author-block">
-                    <a href="THIRD AUTHOR PERSONAL LINK" target="_blank">Third Author</a>
+                    <a href="https://kejiazhang-robust.github.io/" target="_blank">Kejia Zhang</a>
+                  </span>
+                  <span class="author-block">
+                    <a href="" target="_blank">Carl Yang</a>
+                  </span>
+                  <span class="author-block">
+                    <a href="" target="_blank">Zhiming Luo</a>
                   </span>
                   </div>
 
