--- a/index.html
+++ b/index.html
@@ -241,30 +241,31 @@
         <div class="columns is-centered">
           <div class="column has-text-centered">
             <!-- TODO: Replace with your paper title -->
-            <h1 class="title is-1 publication-title">MANI-PURE: MAGNITUDE-ADAPTIVE NOISE INJEC-
-              TION FOR ADVERSARIAL PURIFICATION</h1>
+            <h1 class="title is-1 publication-title">MANI-PURE: MAGNITUDE-ADAPTIVE NOISE INJECTION FOR ADVERSARIAL PURIFICATION</h1>
             <div class="is-size-5 publication-authors">
               <!-- TODO: Replace with your paper authors and their personal links -->
               <span class="author-block">
-                <a href="FIRST AUTHOR PERSONAL LINK" target="_blank">Xiaoyi Huang</a><sup>*</sup>,</span>
+                <a href="FIRST AUTHOR PERSONAL LINK" target="_blank">Xiaoyi Huang</a><sup>1</sup>,
+              </span>
                 <span class="author-block">
-                  <a href="SECOND AUTHOR PERSONAL LINK" target="_blank">Junwei Wu</a><sup>*</sup>,</span>
+                  <a href="SECOND AUTHOR PERSONAL LINK" target="_blank">Junwei Wu</a><sup>2</sup>,
+                </span>
                   <span class="author-block">
-                    <a href="https://kejiazhang-robust.github.io/" target="_blank">Kejia Zhang</a>
+                    <a href="https://kejiazhang-robust.github.io/" target="_blank">Kejia Zhang</a><sup>1</sup>,
                   </span>
                   <span class="author-block">
-                    <a href="" target="_blank">Carl Yang</a>
+                    <a href="" target="_blank">Carl Yang</a>,<sup>2</sup>
                   </span>
                   <span class="author-block">
-                    <a href="" target="_blank">Zhiming Luo</a>
+                    <a href="" target="_blank">Zhiming Luo</a><sup>1*</sup>
                   </span>
                   </div>
 
                   <div class="is-size-5 publication-authors">
                     <!-- TODO: Replace with your institution and conference/journal info -->
-                    <span class="author-block">Institution Name<br>Conference name and year</span>
+                    <span class="author-block"><sup>1</sup>Xiamen University<br><sup>2</sup>Emory University</span>
                     <!-- TODO: Remove this line if no equal contribution -->
-                    <span class="eql-cntrb"><small><br><sup>*</sup>Indicates Equal Contribution</small></span>
+                    <span class="eql-cntrb"><small><br><sup>*</sup>Corresponding author</small></span>
                   </div>
 
                   <div class="column has-text-centered">
