--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
 
                   <div class="is-size-5 publication-authors">
                     <!-- TODO: Replace with your institution and conference/journal info -->
-                    <span class="author-block"><sup>1</sup>Xiamen University<br><sup>2</sup>Emory University</span>
+                    <span class="author-block"><sup>1</sup>Xiamen University  <sup>2</sup>Emory University</span>
                     <!-- TODO: Remove this line if no equal contribution -->
                     <span class="eql-cntrb"><small><br><sup>*</sup>Corresponding author</small></span>
                   </div>
