--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
 
 
 <section class="hero is-light">
-  <h2 class="title is-3">Main Results</h2>
+  <h2 class="title is-3">The pipeline of MANI-Pure. </h2>
   <div class="hero-body">
     <div class="container">
      
@@ -351,13 +351,14 @@
         <img src="static/images/pipe.png" alt="First research result visualization" loading="lazy"/>
         <!-- TODO: Replace with description of this result -->
         <h2 class="subtitle has-text-centered">
-          The pipeline of MANI-Pure. 
+          <text>
           <strong>(I)MANI</strong>.Starting from an adversarial sample, we apply DFT to obtain its frequency representation, 
 partition it into bands, compute average magnitudes, and derive band-wise and spatial weights. 
 These weights modulate Gaussian noise to produce heterogeneous perturbations. 
 <strong>(II)FreqPure</strong>.During the reverse process, the magnitude and phase spectra of the adversarial input and generated image are separated and recombined as shown, 
 with the reconstructed image iteratively fed into subsequent denoising steps.
-        </h2>
+        </text>
+</h2>
       </div>
  
 </div>
