--- a/index.html
+++ b/index.html
@@ -343,9 +343,9 @@
 
 
 <section class="hero is-light">
-  <h2 class="title is-3">The pipeline of MANI-Pure. </h2>
+  <h2 class="title is-3 has-text-centered">The pipeline of MANI-Pure. </h2>
   <div class="hero-body">
-    <div class="container">
+    <div class="container has-text-centered">
      
         <!-- TODO: Replace with your research result images -->
         <img src="static/images/pipe.png" alt="First research result visualization" loading="lazy"/>
@@ -369,7 +369,7 @@ with the reconstructed image iteratively fed into subsequent denoising steps.
 
 <!-- Image carousel -->
 <section class="hero is-small">
-  <h2 class="title is-3">Main Results</h2>
+  <h2 class="title is-3 has-text-centered">Main Results</h2>
   <div class="hero-body">
     <div class="container">
       <div id="results-carousel" class="carousel results-carousel">
